// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar should render prop -- circle 1`] = `
<view
  class="at-avatar at-avatar--normal at-avatar--circle"
>
  <text
    class="at-avatar__text"
  />
</view>
`;

exports[`Avatar should render prop -- image 1`] = `
<view
  class="at-avatar at-avatar--normal"
>
  <image
    class="at-avatar__img"
    src="https://jdc.jd.com/img/100"
  />
</view>
`;

exports[`Avatar should render prop -- openData 1`] = `
<view
  class="at-avatar at-avatar--normal"
>
  <open-data
    type="userAvatarUrl"
  />
</view>
`;

exports[`Avatar should render prop -- size(large)  1`] = `
<view
  class="at-avatar at-avatar--large"
>
  <text
    class="at-avatar__text"
  />
</view>
`;

exports[`Avatar should render prop -- size(normal)  1`] = `
<view
  class="at-avatar at-avatar--normal"
>
  <text
    class="at-avatar__text"
  />
</view>
`;

exports[`Avatar should render prop -- size(small)  1`] = `
<view
  class="at-avatar at-avatar--small"
>
  <text
    class="at-avatar__text"
  />
</view>
`;

exports[`Avatar should render prop -- text 1`] = `
<view
  class="at-avatar at-avatar--normal"
>
  <text
    class="at-avatar__text"
  >
    凹
  </text>
</view>
`;
